--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 PORT=3000
+POSTGRES_HOST=localhost
+POSTGRES_USER=postgres
+POSTGRES_DB=db_test
+POSTGRESS_PASSWORD=0159
+POSTGRESS_PORT=5432
+PRIVATE_KEY=secret_key
