--- a/.env
+++ b/.env
@@ -1,7 +1,15 @@
-PORT=3000
-POSTGRES_HOST=postgres
-POSTGRES_USER=postgres
-POSTGRES_DB=db_test
-POSTGRESS_PASSWORD=root
-POSTGRESS_PORT=5432
+PORT=5000
 PRIVATE_KEY=secret_key
+TYPEORM_CONNECTION=postgres
+TYPEORM_HOST=localhost
+TYPEORM_USERNAME=admin
+TYPEORM_PASSWORD=root
+TYPEORM_DATABASE=postgres
+TYPEORM_PORT=5432
+TYPEORM_SYNCHRONIZE=false
+TYPEORM_LOGGING=true
+TYPEORM_ENTITIES=dist/**/*entity.js
+TYPEORM_MIGRATIONS=dist/migrations/*.js
+TYPEORM_MIGRATIONS_DIR=src/migrations
+TYPEORM_MIGRATIONS_RUN=false
+TYPEORM_MIGRATIONS_TABLE_NAME=migrations
