--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,11 @@
-version: '3.0'
+version: '3.5'
 
 services:
-  main:
-    container_name: main
-    build:
-      context: .
-    env_file:
-      - .env
-    volumes:
-      - .:/app
-      - /app/node_modules
+  db_auth:
+    container_name: db_auth
     ports:
-      - 5000:5000
-      - 9229:9229
-    command: npm run start
-    depends_on:
-      - postgres
-    restart: always
-  postgres:
-    container_name: postgres
-    image: postgres:12
-    env_file:
-      - .env
+      - "5432:5432"
     environment:
-      PG_DATA: /var/lib/postgresql/data
-    ports:
-      - 5432:5432
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-    restart: always
-
-volumes:
-  pgdata:
-
+      - POSTGRES_PASSWORD=${TYPEORM_PASSWORD}
+      - POSTGRES_USER=${TYPEORM_USERNAME}
+    image: postgres:14.3-alpine  
