--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-PORT=5000
+PORT=3000
 PRIVATE_KEY=secret_key
 TYPEORM_CONNECTION=postgres
-TYPEORM_HOST=localhost
+TYPEORM_HOST=postgres
 TYPEORM_USERNAME=admin
-TYPEORM_PASSWORD=root
-TYPEORM_DATABASE=postgres
+TYPEORM_PASSWORD=admin
+TYPEORM_DATABASE=nestjs
 TYPEORM_PORT=5432
 TYPEORM_SYNCHRONIZE=false
 TYPEORM_LOGGING=true
