--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,36 @@
-version: '3.5'
-
+version: "3"
 services:
-  db_auth:
-    container_name: db_auth
+  postgres:
+    image: postgres:14.3-alpine
+    networks:
+      - postgres
+    volumes:
+      - /data/postgres:/data/postgres
+    env_file:
+      - docker.env
+ 
+  pgadmin:
+    image: dpage/pgadmin4:6.18
+    networks:
+      - postgres
     ports:
-      - "5432:5432"
-    environment:
-      - POSTGRES_PASSWORD=${TYPEORM_PASSWORD}
-      - POSTGRES_USER=${TYPEORM_USERNAME}
-    image: postgres:14.3-alpine  
+      - "8080:80"
+    volumes:
+      - /data/pgadmin:/root/.pgadmin
+    env_file:
+      - docker.env
+ 
+  nestjs-api:
+    image: nestjs-api
+    env_file:
+      - .env
+    ports:
+      - "3000:3000"
+    depends_on:
+      - postgres
+    networks:
+      - postgres
+ 
+networks:
+  postgres:
+    driver: bridge
